--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap");
 :root {
   --white: #F9F7F7;
   --blue: #112D4E;
@@ -22,7 +21,7 @@ html {
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 1.6rem;
   background-color: var(--white);
   color: var(--blue);
@@ -330,6 +329,9 @@ nav .wrapper {
   .wrapper .show {
     left: 0;
   }
+  .hide {
+    display: none;
+  }
   .nav-list li {
     margin: 1.5rem 1rem;
   }
@@ -439,7 +441,9 @@ nav .wrapper {
     height: 8rem;
   }
   .nav-list .close-btn {
-    display: none;
+    position: absolute;
+    top: 1.5rem;
+    right: 2.5rem;
   }
   .nav-list .icons {
     padding-left: 2rem;
@@ -461,6 +465,8 @@ nav .wrapper {
 .hero-swiper img {
   -o-object-fit: cover;
      object-fit: cover;
+  -o-object-position: 50% 50%;
+     object-position: 50% 50%;
   width: 100%;
   height: 100%;
 }
@@ -475,18 +481,39 @@ nav .wrapper {
 
 .hero-swiper .swiper-wrapper .swiper-slide a {
   font-size: 2rem;
-  font-weight: 700;
-  padding: 1.2rem;
+  font-weight: 400;
+  padding: 0.5rem 2rem;
   background-color: var(--blue);
-  border-radius: 20px;
+  border-radius: 15px;
   color: var(--white);
   -webkit-transition: all 300ms ease-in;
   transition: all 300ms ease-in;
 }
 
-.hero-swiper .swiper-wrapper .swiper-slide a:hover {
-  background-color: var(--light-blue);
+.hero-swiper .swiper-wrapper .swiper-slide span {
+  color: var(--white);
+  font-weight: 700;
+  letter-spacing: 0.1rem;
+}
+
+.hero-swiper .swiper-wrapper .swiper-slide .blk-text {
   color: var(--blue);
+}
+
+.hero-swiper .swiper-wrapper .swiper-slide a:hover {
+  background-color: var(--white);
+  color: var(--blue);
+  font-weight: 400;
+}
+
+.swiper-button-next,
+.swiper-button-prev {
+  color: var(--blue);
+}
+
+.swiper-button-next:hover,
+.swiper-button-prev:hover {
+  color: var(--white);
 }
 
 .kids-section .title {
@@ -767,6 +794,7 @@ footer {
   line-height: 3em;
   width: 100%;
   padding-bottom: 3rem;
+  font-weight: 200;
 }
 
 .footer-section .row a {
