--- a/styles.scss
+++ b/styles.scss
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap');
-
 :root {
     --white: #F9F7F7;
     --blue: #112D4E;
@@ -21,7 +19,7 @@ html {
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Poppins', sans-serif;
     font-size: 1.6rem;
     background-color: var(--white);
     color: var(--blue);
@@ -297,6 +295,10 @@ nav .wrapper {
         left: 0;
     }
 
+    .hide {
+        display: none;
+    }
+
     .nav-list li {
         margin: 1.5rem 1rem;
     }
@@ -419,10 +421,9 @@ nav .wrapper {
     }
 
     .nav-list .close-btn {
-        // position: absolute;
-        // top: 1.5rem;
-        // right: 2.5rem;
-        display: none;
+        position: absolute;
+        top: 1.5rem;
+        right: 2.5rem;
     }
 
     .nav-list .icons {
@@ -448,6 +449,7 @@ nav .wrapper {
 
 .hero-swiper img {
     object-fit: cover;
+    object-position: 50% 50%;
     width: 100%;
     height: 100%;
 }
@@ -461,17 +463,36 @@ nav .wrapper {
 
 .hero-swiper .swiper-wrapper .swiper-slide a {
     font-size: 2rem;
-    font-weight: 700;
-    padding: 1.2rem;
+    font-weight: 400;
+    padding: 0.5rem 2rem;
     background-color: var(--blue);
-    border-radius: 20px;
+    border-radius: 15px;
     color: var(--white);
     transition: all 300ms ease-in;
 }
+.hero-swiper .swiper-wrapper .swiper-slide span{
+    color: var(--white);
+    font-weight: 700;
+    letter-spacing: 0.1rem;
+}
+.hero-swiper .swiper-wrapper .swiper-slide .blk-text{
+    color: var(--blue);
+}
 
 .hero-swiper .swiper-wrapper .swiper-slide a:hover {
-    background-color: var(--light-blue);
+    background-color: var(--white);
     color: var(--blue);
+    font-weight: 400;
+}
+
+
+.swiper-button-next,
+.swiper-button-prev{
+    color: var(--blue);
+}
+.swiper-button-next:hover,
+.swiper-button-prev:hover{
+    color: var(--white);
 }
 
 // kids section
@@ -731,18 +752,22 @@ footer {
     line-height: 3em;
     width: 100%;
     padding-bottom: 3rem;
+    font-weight: 200;
 }
-.footer-section .row a{
+
+.footer-section .row a {
     color: var(--white);
 }
-@media (max-width: 968px){
-    .footer-section{
+
+@media (max-width: 968px) {
+    .footer-section {
         background-color: var(--blue);
         grid-template-columns: repeat(2, 1fr);
     }
 }
-@media (max-width: 768px){
-    .footer-section{
+
+@media (max-width: 768px) {
+    .footer-section {
         background-color: var(--blue);
         grid-template-columns: 1fr;
     }
