--- a/styles.scss
+++ b/styles.scss
@@ -565,7 +565,7 @@ nav .wrapper {
 }
 
 
-.gallery-item:hover .image img {
+.gallery-item:hover .image .img-scale {
     transform: scale(1.3);
 }
 
